--- a/cinversa/index.html
+++ b/cinversa/index.html
@@ -75,11 +75,11 @@ canvas {
 <label for="a2">Longitud del segon braç (a₂):</label>
 <input type="number" id="a2" value="0.5" step="0.1"><br><br>
 
-<label for="q1">Angle del primer braç (q₁, en graus):</label>
-<input type="number" id="q1" value="45" step="0.1"><br><br>
+<label for="x">Posició x final del robot (x, en metres):</label>
+<input type="number" id="x" value="1.2" step="0.1"><br><br>
 
-<label for="q2">Angle del segon braç (q₂, en graus):</label>
-<input type="number" id="q2" value="30" step="0.1"><br><br>
+<label for="y">Posició y final del robot (y, en metres):</label>
+<input type="number" id="y" value="1.5" step="0.1"><br><br>
 
 <button onclick="calculatePosition()">Calcula la posició</button>
 <!-- Aquesta línia relaciona el codi HTML amb el JavaScript perquè la propietat onclick 
@@ -99,16 +99,20 @@ function calculatePosition() {
   // parseFloat converteix el número en decimal (float)
 
   let a2 = parseFloat(document.getElementById('a2').value);
-  let q1_deg = parseFloat(document.getElementById('q1').value); // Graus
-  let q2_deg = parseFloat(document.getElementById('q2').value); // Graus
+  //let q1_deg = parseFloat(document.getElementById('q1').value); // Graus
+  //let q2_deg = parseFloat(document.getElementById('q2').value); // Graus
 
-  let q1 = q1_deg * Math.PI / 180; // Converteix graus a radians
-  let q2 = q2_deg * Math.PI / 180; // Converteix graus a radians
+  //let q1 = q1_deg * Math.PI / 180; // Converteix graus a radians
+  //let q2 = q2_deg * Math.PI / 180; // Converteix graus a radians
 
+ let x=parseFloat(document.getElementById('x').value); // Metres
+ let y=parseFloat(document.getElementById('y').value); // Metres
+ 
   // Mostrar els contenidors de sortida
   document.getElementById('output').style.display = 'block';
   document.getElementById('robotCanvas').style.display = 'block'; 
-
+  //Aquest contenidors només sortiran si l'usuari clica a un botó que està a la línia 84 perque activa a la 95 i aquesta la 112 i 113
+ 
   // Fase 1: Fórmules
   let output = "<div class='equation'>Les equacions per calcular la posició final del robot són:</div>";
   output += "<div class='equation'>\\[ x = a_1 \\cos(q_1) + a_2 \\cos(q_1 + q_2) \\]</div>"; 
