--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web d'Anna</title>
+  <title>Web de Melany</title>
   <!--Link és un codi html que permet unir i linkar arxius CSS. Els arxius CSS són conjunt de codis
   que ens permeten donar estil a la pàgina. CSS (cascade style sheet) significa full d'estil en cascada i permet donar 
   marges de text, triar el tipus de lletra, triar el color de la lletra, el tamany de la lletra, el interlineat. En cascada vol dir
