--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <!-- 5. Logo i text -->
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="logo.png" alt="Logo" class="logo rounded-circle me-2">
-        <span class="fw-bold">Web d'alumne</span>
+        <span class="fw-bold">Web de Melany</span>
       </a>
 
       <!-- Botó menú mòbil -->
@@ -120,7 +120,7 @@
   <!-- Contingut -->
   <main class="container py-5">
     <h1 class="display-5 fw-bold mb-4">Benvinguts als Projectes</h1>
-    <p class="lead">Em dic Melany, sóc <i>alumne</i> de <b>robótica</b> de 1r 
+    <p class="lead">Em dic Melany Luaces Lazo, sóc <i>alumne</i> de <b>robótica</b> de 1r 
       de Batxillerat de <a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">l'Institut Pompeu Fabra</a>
       amb menú desplegable, icones Font Awesome, mode clar i fosc, i disseny responsiu per mòbil i ordinador utilitzant Bootstrap 5.3.8. Aquest és el punt de partida per editar tot i fer projectes amb el professor Francesc Pérez.
     <p>Aquest pàgina web està escrita en html (lenguatge de marques de hipertext) que dona l'estructura (paràgrafs, títol, llistes, imatges, links, audio, videos) emprant <etiqueta></etiqueta></p>
