--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <!-- Projecte 1 -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="proj1Dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-diagram-project me-1"></i> Braç Robótic </a>
+              <i class="fa-solid fa-diagram-project me-1"></i> Braç Robòtic </a>
             <ul class="dropdown-menu" aria-labelledby="proj1Dropdown">
               <li><a class="dropdown-item" href="https://mluaces-collab.github.io/cdirecta"><i class="fa-solid fa-code me-1"></i> Cinemàtica directa</a></li>
               <li><a class="dropdown-item" href="https://mluaces-collab.github.io/cinversa"><i class="fa-solid fa-database me-1"></i> Cinemàtica inversa</a></li>
