--- a/cinematica/index.html
+++ b/cinematica/index.html
@@ -42,7 +42,13 @@
         El primary és el color principal de la web, en aquest cas són tons foscos per capçeleres i fons.
         El secondary és el color secundari i s'aplica en enllaços i coses que li vols donar importància.
         El accent dona encara més importància, per altres o botons importants.
-        Light 
+        Light és un color clar que és fa servir per fons o textos suaus, que no vulguis destacar o per marcar que és una cosa diferent.
+        Muted és un color apagat per textos secundaris.
+        Succes é sun color verd, que significa exit o que s'ha fet bé.
+        Card-bg és el fons d'una targeta o contenidor.
+        Glass és un efecte de vidre translucid, perque 0.6 és el canal alpha o transparència que va desprès de rgb, que significa el color.
+        Radius és el arrodoniment de les cantonades lg= arrodoniment gran (large) sm= arrodoniment petit (small).
+        Shadow és una ombra suau per donar profunditat a un block o contenedor. */
     
             --primary: #2c3e50;
             --secondary: #3498db;
